--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <main>
         <div class="homepage_content">
             <div class="homepage_content__intro">
-                <h2 class="static_txt">We are <span class="dynamic_txt"></span><span class="cursor">&nbsp;</span></h2>
-                <h2>The best e-commerce platform in Southest Asia</h2>
-                <h1>Join our community as</h1>
+                <p class="static_txt">We are <span class="dynamic_txt"></span><span class="cursor">&nbsp;</span></p>
+                <p>The best e-commerce platform in Southest Asia</p>
+                <h2>Join our community as</h2>
                 <div class="homepage_content__user_roles">
                     <a class="btn-hover color-9" href="customer_registration.html">Customer</a>
                     <a class="btn-hover color-2" href="vendor_registration.html">Vendor</a>
