Upload HTML/CSS/JS code
Upload code

--- a/vendor_registration.html
+++ b/vendor_registration.html
@@ -9,8 +9,8 @@
         @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Hachi+Maru+Pop&family=Hubballi&family=Inter:wght@300;400;500;600;700;800&family=Kalam:wght@700&family=Montserrat:wght@254&family=Open+Sans:wght@326;379&family=Permanent+Marker&family=Poppins:wght@100&family=Roboto:wght@300;400;700&family=Rubik+Glitch&display=swap');
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="asset/css/base.css">
-    <link rel="stylesheet" href="asset/css/registration_pages.css">
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/registration_pages.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
     <main>
         <div class="registration vendor">
             <div class="registration__left">
-                <img src="asset/img/vendor_registration.png" alt="">
+                <img src="assets/img/vendor_registration.png" alt="">
                 <div class="registration__left_content">
                     <h2>Always welcome</h2>
                     <h3>Nice to meet u!</h3>
@@ -49,11 +49,11 @@
                 <form action="" method="post" enctype="application/x-www-form-urlencoded" class="registration__form" id="form_2">
                     <div class="form_field">
                         <label for="avatar" class="edit_btn form_field__label"> 
-                            <img src="asset/img/mock_avt2.png" alt="" class="avt_block">
+                            <img src="assets/img/mock_avt2.png" alt="" class="avt_block">
                             <i class="fa-solid fa-camera camera_icon"></i>
                         </label>
                         <input type="file" name="avatar" accept="image/*" id="avatar" onchange="loadFile(event)" style="display: none"> 
-                        <img src="" alt="" id="output">
+                        <img src="#" alt="" id="output">
                         <span class="form_field__message"></span>
                     </div>
 
@@ -86,7 +86,7 @@
 
                     <div class="registration__right__more">
                         <!-- <a href="">Forgot password?</a> -->
-                        <p>Already have an account? <a href="" class="login_link">Login</a> now</p>
+                        <p>Already have an account? <a href="index.html" class="login_link">Login</a> now</p>
                     </div>
                 </form>
             </div>
@@ -95,8 +95,8 @@
     
     <!-- JS CODE -->
     <!-- Upload image script -->
-    <script src="asset/js/upload_avt.js"></script>
-    <script src="asset/js/validator.js"></script>
+    <script src="assets/js/upload_avt.js"></script>
+    <script src="assets/js/validator.js"></script>
     <script>
         Validator({
             form: "#form_2",
