--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <!-- CSS -->
-    <link rel="stylesheet" href="asset/css/base.css">
-    <link rel="stylesheet" href="asset/css/main.css">
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     <!-- Header section -->
     <header>
         <div class="brand">
-            <img src="asset/img/logo.png" alt="" class="brand__logo">
+            <img src="assets/img/logo.png" alt="" class="brand__logo">
             <p class="brand__text">Zalada</p>
         </div>
         <nav>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="homepage_content__img">
-                <img src="asset/img/homepage_bg.png" alt="">
+                <img src="assets/img/homepage_bg.png" alt="">
             </div>
         </div>
     </main>
