html code for all_order_status

--- a/shipper_registration.html
+++ b/shipper_registration.html
@@ -80,8 +80,8 @@
                         <select name="distribution_hub" id="distribution_hub">
                             <option value="naruto">Naruto</option>
                             <option value="sasuke">Sasuke</option>
-                            <option value="sakura">Sasuke</option>
-                            <option value="obito">Sasuke</option>
+                            <option value="sakura">Sakura</option>
+                            <option value="obito">obito</option>
                         </select>
                     </div>
                     <div class="form_field">
