--- a/all_order_status.html
+++ b/all_order_status.html
@@ -10,124 +10,193 @@
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/base.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <!-- <link rel="stylesheet" href="assets/css/main.css"> -->
     <link rel="stylesheet" href="assets/css/shipper.css">
+    <!-- <link rel="stylesheet" href="assets/css/registration_pages.css"> -->
 </head>
 <body>
-    <header>
-        <div class="brand">
-            <img src="assets/img/logo.png" alt="" class="brand__logo">
+    
+    <header class="shipper_header">
+        <!-- <img src="assets/img/shipper_registration.png" alt="shipper header" class="shipper_header"> -->
+        <!-- <div>
+            <a href="index.html" class="back_btn"  id="shipper_back_btn"><i class="fa-solid fa-chevron-left"></i>Back</a>
+        </div> -->
+        <div class="shipper_banner">
+        <div class="shipper_brand">
+            <img src="./assets/img/logo.png" alt="" class="brand__logo">
             <p class="brand__text">Zalada</p>
         </div>
-        <nav>
-            <ul class="nav_pc_container">
-                <li class="nav_pc_item">
-                    <a href="#" class="nav_pc_item__link">About</a>
-                </li>
-                <li class="nav_pc_item">
-                    <a href="#" class="nav_pc_item__link">Policies</a>
-                </li>
-                <li class="nav_pc_item">
-                    <a href="#" class="nav_pc_item__link">Help</a>
-                </li>
-                <li class="nav_pc_item">
-                    <a href="#" class="nav_pc_item__link">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="shipper__profile">
-            <!-- profile: can be clicked on-->
-            <img src="avatar.png" alt="Avatar" class="avatar">
-        </div>
-        <!-- second nav bar -->
-        <nav class="shipper_sidebar">
-            <ul>
-                <li>
-                    <img src="avatar.png" alt="Avatar" class="avatar">
-                </li>
-                <li>
-                    <a href="#">icon</a>
-                </li>
-                <li>
-                    <a href="#">icon</a>
-                </li>
-            </ul>
-        </nav>
-
-        <!-- profile, greeting and filer holder -->
-        <div class="shipper_content">
-            <!-- uninteractive profile, just for displaying -->
-            <div>
-                <img src="avatar.png" alt="Avatar" class="avatar">
-            </div>
-            <div>
-                <h2> Welcome to your Orders Status</h2>
-            </div>
-            <div>
-                <p>filter</p>
-            </div>
-        </div>
-        <!-- main section -->
         <div>
-            <div>
-                <table>
-                    <!-- <tr>
-                        <th>Order No.</th>
-                        <th>Order item id.</th>
-                        <th>Unit Price</th>
-                        <th>Quantity</th>
-                        <th>Total</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>A pack of 4 Spoons</td>
-                        <td>20</td>
-                        <td>10</td>
-                        <td>80</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Cute bunny socks</td>
-                        <td>60</td>
-                        <td>2</td>
-                        <td>120</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Bunny Glasses</td>
-                        <td>100</td>
-                        <td>1</td>
-                        <td>100</td>
-                    </tr> -->
-                    <tr>
-                        <th>Order No.</th>
-                        <th>Order item id.</th>
-                        <th>Item Name</th>
-                        <th>Shipping Status</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>100</td>
-                        <td>A pack of 4 Spoons</td>
-                        <td><img src="./assets/img/check_mark.png" alt="checkmarkicon" class="shipper__icon"></td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>200</td>
-                        <td>Cute bunny socks</td>
-                        <td><img src="./assets/img/check_mark.png" alt="checkmarkicon" class="shipper__icon"></td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>300</td>
-                        <td>Bunny Glasses</td>
-                        <td><img src="./assets/img/red_mark.png" alt="crossmarkicon" class="shipper__icon"></td>
-                    </tr>
-                </table>
+            <h2>SHIPPING STATUS</h2>
+        </div>
+        <div class="shipper_banner_item shipper_account_link">
+            <a href="#"><img src="./assets/img/shipper_profile.jpg" alt="Avatar" class="shipper_profile__img"></a>
+            <a href="#" class="shipper_account_link"><p>My Account</p></a>
+        </div>
+    </div>
+    </header>
+    <main class="content_wrap">
+
+        <div>
+            <!-- second nav bar -->
+            <nav class="shipper_sidebar wrapper">
+                <!-- <a href="index.html" class="back_btn"  id="shipper_back_btn"><i class="fa-solid fa-chevron-left"></i>Back</a> -->
+                <!-- <ul>
+                    <li class="shipper_sidebar__items"><a href="#"><img src="./assets/img/shipper_profile.jpg" alt="Avatar" class="shipper_sidebar__icon"></a> </li>
+                    <li class="shipper_sidebar__items"><a href="#"><img src="./assets/img/shipper_profile.jpg" alt="Avatar" class="shipper_sidebar__icon"></a> </li>
+                    <li class="shipper_sidebar__items"><a href="#"><img src="./assets/img/shipper_profile.jpg" alt="Avatar" class="shipper_sidebar__icon"></a></li>
+                    <li class="shipper_sidebar__items"><a href="#"><img src="./assets/img/shipper_profile.jpg" alt="Avatar" class="shipper_sidebar__icon"></a></li>
+                </ul> -->
+                <ul>
+                    <li>
+                       <a href="index.html"><i class="fas fa-home"></i>
+                         <div class="tooltip">home</div>
+                       </a>
+                    </li>
+                 
+                    <li>
+                      <a href="#"><i class="fas fa-user"></i>
+                         <div class="tooltip">profile</div>
+                      </a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fas fa-bullhorn"></i>
+                           <div class="tooltip">Notification</div>
+                        </a>
+                      </li>
+                    <li>
+                        <a href="#"><i class="fas fa-search"></i>
+                          <div class="tooltip">search</div>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#"><i class="fas fa-edit"></i>
+                          <div class="tooltip">Update</div>
+                        </a>
+                      </li>
+
+                    </ul>
+            </nav>
+
+
+            <!-- profile, greeting and filer holder -->
+            <!-- <div>
+                <a href="index.html" class="back_btn"  id="shipper_back_btn"><i class="fa-solid fa-chevron-left"></i>Back</a>
+            </div> -->
+            <div class="shipper_content">
+                <div class="shipper__heading">
+                    <!-- uninteractive profile, just for displaying -->
+                    <!-- <div>
+                        <a href="#" class="upd_btn"  id="shipper_upd_btn"><i class="fas fa-pencil-square-o"></i>Update</a>
+                    </div> -->
+                </div>
+                <!-- main section -->
+                <div class="shipper_content__table">
+                    <table class="shipper__table">
+                        <tr>
+                            <th>Order No.</th>
+                            <th>Order item id.</th>
+                            <th>Item Name</th>
+                            <th>Address</th>
+                            <th>Customer</th>
+                            <th>Shipping Status</th>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>100</td>
+                            <td>A pack of 4 Spoons</td>
+                            <td>100 Ba Hat Street Ward 4 District 10</td>
+                            <td>A</td>
+                            <td><img src="./assets/img/check_mark.png" alt="checkmarkicon" class="shipper__icon"></td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>200</td>
+                            <td>Cute bunny socks</td>
+                            <td>28/9 Blah Blah Street Ward 10 District Tan Binh</td>
+                            <td>B</td>
+                            <td><img src="./assets/img/pending-icon.png" alt="pendingicon" class="shipper__icon"></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>300</td>
+                            <td>Bunny Glasses</td>
+                            <td>A/19 Blah Blah Street Ward 1 District 7</td>
+                            <td>C</td>
+                            <td><img src="./assets/img/red_mark.png" alt="crossmarkicon" class="shipper__icon"></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>300</td>
+                            <td>Bunny Glasses</td>
+                            <td>A/19 Blah Blah Street Ward 1 District 7</td>
+                            <td>C</td>
+                            <td><img src="./assets/img/red_mark.png" alt="crossmarkicon" class="shipper__icon"></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>300</td>
+                            <td>Bunny Glasses</td>
+                            <td>A/19 Blah Blah Street Ward 1 District 7</td>
+                            <td>C</td>
+                            <td><img src="./assets/img/red_mark.png" alt="crossmarkicon" class="shipper__icon"></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>300</td>
+                            <td>Bunny Glasses</td>
+                            <td>A/19 Blah Blah Street Ward 1 District 7</td>
+                            <td>C</td>
+                            <td><img src="./assets/img/red_mark.png" alt="crossmarkicon" class="shipper__icon"></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>300</td>
+                            <td>Bunny Glasses</td>
+                            <td>A/19 Blah Blah Street Ward 1 District 7</td>
+                            <td>C</td>
+                            <td><img src="./assets/img/red_mark.png" alt="crossmarkicon" class="shipper__icon"></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>300</td>
+                            <td>Bunny Glasses</td>
+                            <td>A/19 Blah Blah Street Ward 1 District 7</td>
+                            <td>C</td>
+                            <td><img src="./assets/img/red_mark.png" alt="crossmarkicon" class="shipper__icon"></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </main>
+    <footer>
+        <!-- <div class="shipper_footer"> -->
+            <div class="brand">
+                <img src="./assets/img/logo.png" alt="" class="brand__logo">
+                <p class="brand__text">Zalada</p>
+            </div>
+            <nav>
+                <ul class="nav_pc_container">
+                    <li class="nav_pc_item">
+                        <a href="#" class="nav_pc_item__link">About</a>
+                    </li>
+                    <li class="nav_pc_item">
+                        <a href="#" class="nav_pc_item__link">Policies</a>
+                    </li>
+                    <li class="nav_pc_item">
+                        <a href="#" class="nav_pc_item__link">Help</a>
+                    </li>
+                    <li class="nav_pc_item">
+                        <a href="#" class="nav_pc_item__link">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        <!-- </div> -->
+        <div>
+            <p>©2022 Group 7</p>
+        </div>
+
+    </footer>
 </body>
 </html>
