added edit,save, delete and add rows to table

--- a/all_order_status.html
+++ b/all_order_status.html
@@ -70,7 +70,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="#"><i class="fas fa-edit"></i>
+                        <a href="order_detail.html"><i class="fas fa-edit"></i>
                           <div class="tooltip">Update</div>
                         </a>
                       </li>
