--- a/shipper_registration.html
+++ b/shipper_registration.html
@@ -85,7 +85,7 @@
                         </select>
                     </div>
                     <div class="form_field">
-                        <input name="sdsd" type="submit" class="form_field__input btn-hover color-1" value="Register">
+                        <input type="submit" class="form_field__input btn-hover color-1" value="Register">
                     </div>
 
                     <div class="registration__right__more">
